--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,6 +1,9 @@
 body {
   font-family: 'PT Sans', sans-serif;
 }
+body * {
+  transition: all 1s ease;
+}
 h2 {
   font-family: 'PT Sans Caption', sans-serif;
   font-size: 36px;
@@ -21,6 +24,7 @@ a {
   font-size: 15px;
   line-height: 40px;
 }
+
 nav {
   position: fixed;
   z-index: 2;
@@ -38,6 +42,17 @@ nav {
   align-items: center;
   justify-content: space-between;
 }
+.logo {
+  display: flex;
+
+  margin-top: -20px;
+
+  align-items: flex-end;
+}
+.logo img {
+  width: 35px;
+  height: 35px;
+}
 nav img {
   padding-left: 25px;
 }
@@ -48,18 +63,34 @@ nav a {
 article {
   width: 90%;
   margin: 0 auto;
-  padding-top: 100px;
+  padding-top: 170px;
 
   box-shadow: 0 0 10px 0 rgba(0,0,0,.1);
 }
 .card {
   display: flex;
+  overflow-x: hidden;
+
+  padding-left: 80px;
 
   justify-content: space-around;
-  align-items: center;
+  align-items: flex-start;
+}
+.card img {
+  width: 670px;
+  margin-top: -30px;
+  /* margin-left: -50px; */
+  margin-right: -210px;
 }
 .card:nth-of-type(2) {
   flex-direction: row-reverse;
+
+  padding-right: 80px;
+}
+.card:nth-of-type(2) .text + img {
+  margin: -10px 15px 0 -435px;
+
+  transform: scale(-1, 1);
 }
 .card + .card {
   margin-top: 50px
@@ -67,9 +98,21 @@ article {
 .text {
   width: 40vw;
 }
+.card .gif {
+  width: 900px;
+  margin-top: -79px;
+  margin-right: -362px;
+}
+.text img {
+  width: 101%;
+  margin-top: 30px;
+  margin-left: -13px;
+
+  opacity: 0.6;
+}
 
 .center {
-  width: 45vw;
+  width: 47vw;
   margin: 100px auto 0;
 
   text-align: center;
@@ -93,7 +136,7 @@ article {
   padding: 10px 20px;
 
   color: #fff;
-  background-color: #6BD425;
+  background-color: #EE4266;
 
   font-size: 20px;
   font-weight: bold;
@@ -109,4 +152,54 @@ footer {
 }
 footer p {
   font-size: 16px;
+}
+
+@media (max-width: 768px) {
+  article {
+    width: 100%
+  }
+  h2 {
+    font-size: 27px;
+    font-weight: 700;
+    line-height: 36px;
+  }
+  article p {
+    margin-top: 40px;
+
+    font-size: 22px;
+    line-height: 30px;
+  }
+  .card, .card:nth-of-type(2) {
+    flex-direction: column;
+  }
+  .card img, .card:nth-of-type(2) .text + img, .card .gif {
+    margin: 0;
+    padding: 0;
+  }
+  .card .text + img {
+    margin-top: -28px;
+    padding-left: 120px;
+  }
+  .card:nth-of-type(2) .text + img {
+    width: 450px;
+    margin-top: 10px;
+    margin-left: 234px;
+
+    transform: scale(1, 1);
+  }
+  .text {
+    width: 70vw;
+  }
+  .text img {
+    margin-top: 10px;
+    margin-left: -15px;
+  }
+  .card .gif {
+    width: 560px;
+    padding-left: 250px;
+  }
+  .center {
+    width: 80vw;
+    margin: 0 auto;
+  }
 }
